# Fortran-Investigation

./: .gitignore  CMakeLists.txt  README.md  main.f90
src/: CMakeLists.txt
src/C_sharp/: CMakelIsts.txt  myLib.cs
src/Fortran/: CMakeLists.txt  geometry.f90  maths.f90  sorts.f90
src/application/: App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  application.csproj
src/application/MVVM/: ViewModelBase.cs
src/application/Model/: GeometryObject.cs
src/application/Properties/: AssemblyInfo.cs
src/application/ViewModel/: MainWindowViewModel.cs
